@@ -23,7 +23,6 @@ FR0003999473;INDICE GEN.SBF80;PX8;EURONEXT;EUR;PAR;FR
 FR0003999481;INDICE GEN.SBF120;PX4;EURONEXT;EUR;PAR;FR
 FR0003999499;INDICE GEN.SBF250;PX5;EURONEXT;EUR;PAR;FR
 FR0003501980;IT.CAC;PXT;EURONEXT;EUR;PAR;FR
-FR0003999572;INDICE SBF SBF-FCI;PX3;EURONEXT;EUR;PAR;FR
 PTING0200002;PSI-20;PSI20;EURONEXT;EUR;LIS;ES
 PTING0210001;PSI-20TR;PSITR;EURONEXT;EUR;LIS;ES
 PTING1000005;PSI GERAL;BVLGR;EURONEXT;EUR;LIS;ES
